# colorpalette

./: CMakeLists.txt  README.md  colorpalette.cpp
